--- a/src/app/create-patient/create-patient-dialog/create-patient-dialog.component.html
+++ b/src/app/create-patient/create-patient-dialog/create-patient-dialog.component.html
@@ -18,9 +18,9 @@
         </mat-form-field>
         <br>
         <mat-radio-group [formControl]="genderControl">
-            <mat-radio-button value="male">Male</mat-radio-button>
-            <mat-radio-button value="female">Female</mat-radio-button>
-            <mat-radio-button value="other">Other</mat-radio-button>
+            <mat-radio-button value=1>Male</mat-radio-button>
+            <mat-radio-button value=2>Female</mat-radio-button>
+            <mat-radio-button value=3>Other</mat-radio-button>
         </mat-radio-group>
         <br>
         <mat-form-field>
