--- a/src/app/admission/admission-dashboard/admission-dashboard.component.html
+++ b/src/app/admission/admission-dashboard/admission-dashboard.component.html
@@ -3,7 +3,7 @@
         <button mat-raised-button [routerLink]="'manage-doctors'">Doctors</button>
         <button mat-raised-button [routerLink]="'manage-patients'">Patients</button>
         <button mat-raised-button (click)="openCreatePatient()">Create Patient</button>
-        <button mat-raised-button>Create Appointment</button>   
+        <button mat-raised-button (click)="openCreateAdmission()">Create Appointment</button>   
     </mat-card-header>
     <mat-card-content>
         <div class="mat-elevation-z3">
@@ -18,11 +18,11 @@
                 </ng-container>ƒ
                 <ng-container matColumnDef="Patient Name">
                     <th mat-header-cell *matHeaderCellDef> Patient Name </th>
-                    <td mat-cell *matCellDef="let element"> {{element.patientName}} </td>
+                    <td mat-cell *matCellDef="let element"> {{element.patient.fullName}} </td>
                 </ng-container>
                 <ng-container matColumnDef="Doctor Name">
                     <th mat-header-cell *matHeaderCellDef> Doctor Name </th>
-                    <td mat-cell *matCellDef="let element"> {{element.doctorName}} </td>
+                    <td mat-cell *matCellDef="let element"> {{element.doctor.firstName}} </td>
                 </ng-container>
                 <ng-container matColumnDef="Emergency">
                     <th mat-header-cell *matHeaderCellDef> Emergency </th>
