--- a/src/app/create-patient/create-patient-dialog/create-patient-dialog.component.html
+++ b/src/app/create-patient/create-patient-dialog/create-patient-dialog.component.html
@@ -33,6 +33,8 @@
             <input matInput [formControl]="addressControl">
         </mat-form-field>
         <br>
-        <button mat-raised-button type="submit">Create</button>
+        <div class="button-container">
+            <button mat-raised-button type="submit">Create</button>
+        </div>
     </form>
 </div>
