--- a/src/app/doctor-appointments/doctor-dashboard/doctor-dashboard.component.html
+++ b/src/app/doctor-appointments/doctor-dashboard/doctor-dashboard.component.html
@@ -34,7 +34,7 @@
                             disabled="element.recordId !== null">Create record</button>
                         <button mat-raised-button color="primary">Edit</button>
                         <button mat-raised-button color="warn">Delete</button>
-                        <button *ngIf="element.recordId !== null" mat-raised-button>Download</button>
+                        <button mat-raised-button>Download</button>
                     </td>
                 </ng-container>
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
