Added Pagination service and pagination to all tables

--- a/src/app/doctor-appointments/doctor-dashboard/doctor-dashboard.component.html
+++ b/src/app/doctor-appointments/doctor-dashboard/doctor-dashboard.component.html
@@ -2,62 +2,65 @@
     <mat-card-header class="header-container">
         <button mat-raised-button (click)="logout()">Log out</button>
     </mat-card-header>
-    <mat-card-content>
-        <div class="mat-elevation-z3">
-            <table mat-table [dataSource]="admissions">
-                <ng-container matColumnDef="admissionId">
-                    <th mat-header-cell *matHeaderCellDef> No. </th>
-                    <td mat-cell *matCellDef="let element"> {{element.admissionId}} </td>
-                </ng-container>
-                <ng-container matColumnDef="Date">
-                    <th mat-header-cell *matHeaderCellDef> Date </th>
-                    <td mat-cell *matCellDef="let element"> {{element.admissionDate | date}} </td>
-                </ng-container>ƒ
-                <ng-container matColumnDef="Patient Name">
-                    <th mat-header-cell *matHeaderCellDef> Patient Name </th>
-                    <td mat-cell *matCellDef="let element"> {{element.patient.fullName}} </td>
-                </ng-container>
-                <ng-container matColumnDef="Doctor Name">
-                    <th mat-header-cell *matHeaderCellDef> Doctor Name </th>
-                    <td mat-cell *matCellDef="let element">
-                        {{element.doctor.name + ' ' + element.doctor.surname + ' - ' + element.doctor.code}}
-                    </td>
-                </ng-container>
-                <ng-container matColumnDef="Emergency">
-                    <th mat-header-cell *matHeaderCellDef> Emergency </th>
-                    <td mat-cell *matCellDef="let element"> {{element.isEmergency ? 'Yes' : 'No'}} </td>
-                </ng-container>
-                <ng-container matColumnDef="Action">
-                    <th mat-header-cell *matHeaderCellDef> Action </th>
-                    <td mat-cell *matCellDef="let element">
-                        <button mat-raised-button (click)="openCreateRecord(element)"
-                            disabled="element.recordId !== null">Create record</button>
-                        <button mat-raised-button color="primary">Edit</button>
-                        <button mat-raised-button color="warn">Delete</button>
-                        <button mat-raised-button>Download</button>
-                    </td>
-                </ng-container>
-                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-            </table>
-        </div>
-    </mat-card-content>
-    <mat-card-footer>
-        <div class="footer-container mat-elevation-z8">
-            <mat-form-field>
-                <mat-label>Enter a date range</mat-label>
-                <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
-                    <input matStartDate formControlName="start" placeholder="Start date">
-                    <input matEndDate formControlName="end" placeholder="End date">
-                </mat-date-range-input>
-                <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-                <mat-date-range-picker #picker></mat-date-range-picker>
-                <mat-error *ngIf="range.controls.start.hasError('matStartDateInvalid')">Invalid start date</mat-error>
-                <mat-error *ngIf="range.controls.end.hasError('matEndDateInvalid')">Invalid end date</mat-error>
-            </mat-form-field>
-            <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons
-                aria-label="Select page of periodic elements">
-            </mat-paginator>
-        </div>
-    </mat-card-footer>
+    <ng-container *ngIf="combinedData$ | async as data">
+        <mat-card-content>
+            <div class="mat-elevation-z3">
+                <table mat-table [dataSource]="data.data">
+                    <ng-container matColumnDef="admissionId">
+                        <th mat-header-cell *matHeaderCellDef> No. </th>
+                        <td mat-cell *matCellDef="let element"> {{element.admissionId}} </td>
+                    </ng-container>
+                    <ng-container matColumnDef="Date">
+                        <th mat-header-cell *matHeaderCellDef> Date </th>
+                        <td mat-cell *matCellDef="let element"> {{element.admissionDate | date}} </td>
+                    </ng-container>ƒ
+                    <ng-container matColumnDef="Patient Name">
+                        <th mat-header-cell *matHeaderCellDef> Patient Name </th>
+                        <td mat-cell *matCellDef="let element"> {{element.patient.fullName}} </td>
+                    </ng-container>
+                    <ng-container matColumnDef="Doctor Name">
+                        <th mat-header-cell *matHeaderCellDef> Doctor Name </th>
+                        <td mat-cell *matCellDef="let element">
+                            {{element.doctor.name + ' ' + element.doctor.surname + ' - ' + element.doctor.code}}
+                        </td>
+                    </ng-container>
+                    <ng-container matColumnDef="Emergency">
+                        <th mat-header-cell *matHeaderCellDef> Emergency </th>
+                        <td mat-cell *matCellDef="let element"> {{element.isEmergency ? 'Yes' : 'No'}} </td>
+                    </ng-container>
+                    <ng-container matColumnDef="Action">
+                        <th mat-header-cell *matHeaderCellDef> Action </th>
+                        <td mat-cell *matCellDef="let element">
+                            <button mat-raised-button (click)="openCreateRecord(element)"
+                                disabled="element.recordId !== null">Create record</button>
+                            <button mat-raised-button color="primary">Edit</button>
+                            <button mat-raised-button color="warn">Delete</button>
+                            <button mat-raised-button>Download</button>
+                        </td>
+                    </ng-container>
+                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                </table>
+            </div>
+        </mat-card-content>
+        <mat-card-footer>
+            <div class="footer-container mat-elevation-z8">
+                <mat-form-field>
+                    <mat-label>Enter a date range</mat-label>
+                    <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
+                        <input matStartDate formControlName="start" placeholder="Start date">
+                        <input matEndDate formControlName="end" placeholder="End date">
+                    </mat-date-range-input>
+                    <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+                    <mat-date-range-picker #picker></mat-date-range-picker>
+                    <mat-error *ngIf="range.controls.start.hasError('matStartDateInvalid')">Invalid start
+                        date</mat-error>
+                    <mat-error *ngIf="range.controls.end.hasError('matEndDateInvalid')">Invalid end date</mat-error>
+                </mat-form-field>
+                <mat-paginator [length]="data.totalCount" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons
+                    aria-label="Select page of periodic elements" (page)="pageChanged($event)">
+                </mat-paginator>
+            </div>
+        </mat-card-footer>
+    </ng-container>
 </mat-card>
