--- a/src/app/manage-doctors/doctors-dashboard/doctors-dashboard.component.html
+++ b/src/app/manage-doctors/doctors-dashboard/doctors-dashboard.component.html
@@ -3,42 +3,44 @@
         <button mat-raised-button (click)="goBack()">Go Back</button>
         <button mat-raised-button (click)="openCreateDoctor()">Create Doctor</button>
     </mat-card-header>
-    <mat-card-content>
-        <div class="mat-elevation-z3">
-            <table mat-table [dataSource]="doctors">
-                <ng-container matColumnDef="Name">
-                    <th mat-header-cell *matHeaderCellDef> Name </th>
-                    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-                </ng-container>
-                <ng-container matColumnDef="Surname">
-                    <th mat-header-cell *matHeaderCellDef> Surname </th>
-                    <td mat-cell *matCellDef="let element"> {{element.surname}} </td>
-                </ng-container>ƒ
-                <ng-container matColumnDef="Title">
-                    <th mat-header-cell *matHeaderCellDef> Title </th>
-                    <td mat-cell *matCellDef="let element"> {{element.title.titleName}} </td>
-                </ng-container>
-                <ng-container matColumnDef="Code">
-                    <th mat-header-cell *matHeaderCellDef> Code </th>
-                    <td mat-cell *matCellDef="let element"> {{element.code}} </td>
-                </ng-container>
-                <ng-container matColumnDef="Action">
-                    <th mat-header-cell *matHeaderCellDef> Action </th>
-                    <td mat-cell *matCellDef="let element">
-                        <button mat-raised-button color="primary">Edit</button>
-                        <button mat-raised-button color="warn">Delete</button>
-                    </td>
-                </ng-container>
-                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-            </table>
-        </div>
-    </mat-card-content>
-    <mat-card-footer>
-        <div class="footer-container mat-elevation-z8">
-            <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons
-                aria-label="Select page of periodic elements">
-            </mat-paginator>
-        </div>
-    </mat-card-footer>
+    <ng-container *ngIf="combinedData$ | async as data">
+        <mat-card-content>
+            <div class="mat-elevation-z3">
+                <table mat-table [dataSource]="data.data">
+                    <ng-container matColumnDef="Name">
+                        <th mat-header-cell *matHeaderCellDef> Name </th>
+                        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+                    </ng-container>
+                    <ng-container matColumnDef="Surname">
+                        <th mat-header-cell *matHeaderCellDef> Surname </th>
+                        <td mat-cell *matCellDef="let element"> {{element.surname}} </td>
+                    </ng-container>ƒ
+                    <ng-container matColumnDef="Title">
+                        <th mat-header-cell *matHeaderCellDef> Title </th>
+                        <td mat-cell *matCellDef="let element"> {{element.title.titleName}} </td>
+                    </ng-container>
+                    <ng-container matColumnDef="Code">
+                        <th mat-header-cell *matHeaderCellDef> Code </th>
+                        <td mat-cell *matCellDef="let element"> {{element.code}} </td>
+                    </ng-container>
+                    <ng-container matColumnDef="Action">
+                        <th mat-header-cell *matHeaderCellDef> Action </th>
+                        <td mat-cell *matCellDef="let element">
+                            <button mat-raised-button color="primary">Edit</button>
+                            <button mat-raised-button color="warn">Delete</button>
+                        </td>
+                    </ng-container>
+                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                </table>
+            </div>
+        </mat-card-content>
+        <mat-card-footer>
+            <div class="footer-container mat-elevation-z8">
+                <mat-paginator [length]="data.totalCount" [pageSizeOptions]=" [5, 10, 20]" showFirstLastButtons
+                    aria-label="Select page of periodic elements" (page)="pageChanged($event)">
+                </mat-paginator>
+            </div>
+        </mat-card-footer>
+    </ng-container>
 </mat-card>
