Added confirmation dialog component Implemented soft deleting of patients Added some margins between action buttons

--- a/src/app/confirmation-dialog/confirmation-dialog/confirmation-dialog.component.scss
+++ b/src/app/confirmation-dialog/confirmation-dialog/confirmation-dialog.component.scss
@@ -1,13 +1,19 @@
 .header-container {
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
     align-items: center;
+    padding: 16px;
+    font-weight: 500;
+    font-size: 24px;
+}
+
+.main-container {
     padding: 16px;
 }
 
 .footer-container {
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
     padding: 16px;
 }
