--- a/src/app/admission/admission-dashboard/admission-dashboard.component.html
+++ b/src/app/admission/admission-dashboard/admission-dashboard.component.html
@@ -1,10 +1,10 @@
 <mat-card>
     <mat-card-header class="header-container">
         <button mat-raised-button (click)="logout()">Logout</button>
-        <button mat-raised-button [routerLink]="'manage-doctors'">Doctors</button>
-        <button mat-raised-button [routerLink]="'manage-patients'">Patients</button>
-        <button mat-raised-button (click)="openCreatePatient()">Create Patient</button>
-        <button mat-raised-button (click)="openCreateAdmission()">Create Appointment</button>
+        <button mat-raised-button [routerLink]="'manage-doctors'" class="margin-left">Doctors</button>
+        <button mat-raised-button [routerLink]="'manage-patients'" class="margin-left">Patients</button>
+        <button mat-raised-button (click)="openCreatePatient()" class="margin-left">Create Patient</button>
+        <button mat-raised-button (click)="openCreateAdmission()" class="margin-left">Create Appointment</button>
     </mat-card-header>
     <ng-container *ngIf="combinedData$ | async as data">
         <mat-card-content>
@@ -36,8 +36,8 @@
                         <th mat-header-cell *matHeaderCellDef> Action </th>
                         <td mat-cell *matCellDef="let element">
                             <button mat-raised-button color="primary">Edit</button>
-                            <button mat-raised-button color="warn">Delete</button>
-                            <button mat-raised-button>Download</button>
+                            <button mat-raised-button color="warn" class="margin-left">Delete</button>
+                            <button mat-raised-button class="margin-left">Download</button>
                         </td>
                     </ng-container>
                     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
