--- a/src/app/manage-patients/patients-dashboard/patients-dashboard.component.html
+++ b/src/app/manage-patients/patients-dashboard/patients-dashboard.component.html
@@ -1,7 +1,7 @@
 <mat-card>
     <mat-card-header class="header-container">
         <button mat-raised-button (click)="goBack()">Go Back</button>
-        <button mat-raised-button (click)="openCreatePatient()">Create Patient</button>
+        <button mat-raised-button (click)="openCreatePatient()" class="margin-left">Create Patient</button>
     </mat-card-header>
     <ng-container *ngIf="combinedData$ | async as data">
 
@@ -28,7 +28,9 @@
                         <th mat-header-cell *matHeaderCellDef> Action </th>
                         <td mat-cell *matCellDef="let element">
                             <button mat-raised-button color="primary">Edit</button>
-                            <button mat-raised-button color="warn">Delete</button>
+                            <button mat-raised-button color="warn" (click)="deletePatient(element.patientId)" class="margin-left">
+                                Delete
+                            </button>
                         </td>
                     </ng-container>
                     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
