--- a/src/app/admission/admission-dashboard/admission-dashboard.component.html
+++ b/src/app/admission/admission-dashboard/admission-dashboard.component.html
@@ -36,7 +36,9 @@
                         <th mat-header-cell *matHeaderCellDef> Action </th>
                         <td mat-cell *matCellDef="let element">
                             <button mat-raised-button color="primary">Edit</button>
-                            <button mat-raised-button color="warn" class="margin-left">Delete</button>
+                            <button mat-raised-button color="warn" class="margin-left" (click)="deleteAdmission(element.admissionId)">
+                                Delete
+                            </button>
                             <button mat-raised-button class="margin-left">Download</button>
                         </td>
                     </ng-container>
