--- a/src/app/manage-doctors/doctors-dashboard/doctors-dashboard.component.html
+++ b/src/app/manage-doctors/doctors-dashboard/doctors-dashboard.component.html
@@ -1,7 +1,7 @@
 <mat-card>
     <mat-card-header class="header-container">
         <button mat-raised-button (click)="goBack()">Go Back</button>
-        <button mat-raised-button (click)="openCreateDoctor()">Create Doctor</button>
+        <button mat-raised-button (click)="openCreateDoctor()" class="margin-left">Create Doctor</button>
     </mat-card-header>
     <ng-container *ngIf="combinedData$ | async as data">
         <mat-card-content>
@@ -27,7 +27,9 @@
                         <th mat-header-cell *matHeaderCellDef> Action </th>
                         <td mat-cell *matCellDef="let element">
                             <button mat-raised-button color="primary">Edit</button>
-                            <button mat-raised-button color="warn">Delete</button>
+                            <button mat-raised-button color="warn" (click)="deleteDoctor(element.doctorId)" class="margin-left">
+                                Delete
+                            </button>
                         </td>
                     </ng-container>
                     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
