--- a/src/app/manage-patients/patients-dashboard/patients-dashboard.component.html
+++ b/src/app/manage-patients/patients-dashboard/patients-dashboard.component.html
@@ -4,7 +4,6 @@
         <button mat-raised-button (click)="openCreatePatient()" class="margin-left">Create Patient</button>
     </mat-card-header>
     <ng-container *ngIf="combinedData$ | async as data">
-
         <mat-card-content>
             <div class="mat-elevation-z3">
                 <table mat-table [dataSource]="data.data">
@@ -28,7 +27,8 @@
                         <th mat-header-cell *matHeaderCellDef> Action </th>
                         <td mat-cell *matCellDef="let element">
                             <button mat-raised-button color="primary">Edit</button>
-                            <button mat-raised-button color="warn" (click)="deletePatient(element.patientId)" class="margin-left">
+                            <button mat-raised-button color="warn" (click)="deletePatient(element.patientId)"
+                                class="margin-left">
                                 Delete
                             </button>
                         </td>
