--- a/src/app/admission/admission-dashboard/admission-dashboard.component.html
+++ b/src/app/admission/admission-dashboard/admission-dashboard.component.html
@@ -36,7 +36,8 @@
                         <th mat-header-cell *matHeaderCellDef> Action </th>
                         <td mat-cell *matCellDef="let element">
                             <button mat-raised-button color="primary">Edit</button>
-                            <button mat-raised-button color="warn" class="margin-left" (click)="deleteAdmission(element.admissionId)">
+                            <button mat-raised-button color="warn" class="margin-left"
+                                (click)="deleteAdmission(element.admissionId)">
                                 Delete
                             </button>
                             <button mat-raised-button class="margin-left">Download</button>
@@ -51,15 +52,16 @@
             <div class="footer-container mat-elevation-z8">
                 <mat-form-field>
                     <mat-label>Enter a date range</mat-label>
-                    <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
-                        <input matStartDate formControlName="start" placeholder="Start date">
-                        <input matEndDate formControlName="end" placeholder="End date">
+                    <mat-date-range-input [formGroup]="dateRange" [rangePicker]="picker">
+                        <input matStartDate formControlName="start" placeholder="Start date" [value]="data.startDate">
+                        <input matEndDate (dateInput)="initializeAdmissions()" formControlName="end"
+                            placeholder="End date" [value]="data.endDate">
                     </mat-date-range-input>
                     <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
                     <mat-date-range-picker #picker></mat-date-range-picker>
-                    <mat-error *ngIf="range.controls.start.hasError('matStartDateInvalid')">Invalid start
+                    <mat-error *ngIf="dateRange.controls.start.hasError('matStartDateInvalid')">Invalid start
                         date</mat-error>
-                    <mat-error *ngIf="range.controls.end.hasError('matEndDateInvalid')">Invalid end date</mat-error>
+                    <mat-error *ngIf="dateRange.controls.end.hasError('matEndDateInvalid')">Invalid end date</mat-error>
                 </mat-form-field>
                 <mat-paginator [length]="data.totalCount" [pageSizeOptions]="[1, 2, 3]" showFirstLastButtons
                     aria-label="Select page of periodic elements" (page)="pageChanged($event)">
