--- a/src/app/doctor-appointments/doctor-dashboard/doctor-dashboard.component.html
+++ b/src/app/doctor-appointments/doctor-dashboard/doctor-dashboard.component.html
@@ -46,15 +46,16 @@
             <div class="footer-container mat-elevation-z8">
                 <mat-form-field>
                     <mat-label>Enter a date range</mat-label>
-                    <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
-                        <input matStartDate formControlName="start" placeholder="Start date">
-                        <input matEndDate formControlName="end" placeholder="End date">
+                    <mat-date-range-input [formGroup]="dateRange" [rangePicker]="picker">
+                        <input matStartDate formControlName="start" placeholder="Start date" [value]="data.startDate">
+                        <input matEndDate (dateInput)="initializeAdmissions()" formControlName="end"
+                            placeholder="End date" [value]="data.endDate">
                     </mat-date-range-input>
                     <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
                     <mat-date-range-picker #picker></mat-date-range-picker>
-                    <mat-error *ngIf="range.controls.start.hasError('matStartDateInvalid')">Invalid start
+                    <mat-error *ngIf="dateRange.controls.start.hasError('matStartDateInvalid')">Invalid start
                         date</mat-error>
-                    <mat-error *ngIf="range.controls.end.hasError('matEndDateInvalid')">Invalid end date</mat-error>
+                    <mat-error *ngIf="dateRange.controls.end.hasError('matEndDateInvalid')">Invalid end date</mat-error>
                 </mat-form-field>
                 <mat-paginator [length]="data.totalCount" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons
                     aria-label="Select page of periodic elements" (page)="pageChanged($event)">
